Feature base vars

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,2 +1,10 @@
 $baseFontSize: 18px;
 $darkenPercent: 20;
+$baseSpacing: 10px;
+$borderRadius: 6px;
+
+// Breakpoints
+$bp-small: 425px;
+$bp-medium: 768px;
+$bp-large: 1024px;
+$bp-xlarge: 1440px;
