--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -9,6 +9,6 @@
 }
 
 @mixin bottom-border-radius($borderRadius) {
-  border-top-left-radius: $borderRadius;
-  border-top-right-radius: $borderRadius;
+  border-bottom-left-radius: $borderRadius;
+  border-bottom-right-radius: $borderRadius;
 }
