--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,6 +2,7 @@ $baseFontSize: 18px;
 $darkenPercent: 20;
 $baseSpacing: 10px;
 $borderRadius: 6px;
+$productImageBaseHeight: 170px;
 
 // Breakpoints
 $bp-small: 425px;
