--- a/src/ProductList/ProductList.scss
+++ b/src/ProductList/ProductList.scss
@@ -2,8 +2,7 @@
 @import 'scss/colors';
 @import 'scss/mixins';
 
-.test {
-  height: 200px;
-  width: 200px;
-  @include background-grandient-darken($primary, $darkenPercent)
+.product-list {
+  padding: $baseSpacing;
+  margin: 0 auto;
 }
