Style cursor pointer on fav icon

--- a/src/ProductList/components/ProductPreview/ProductPreview.scss
+++ b/src/ProductList/components/ProductPreview/ProductPreview.scss
@@ -48,6 +48,7 @@
       right: $baseSpacing;
       top: $baseSpacing;
       position: absolute;
+      cursor: pointer;
 
       svg.favorite {
         fill: red;
