--- a/src/ProductList/ProductList.scss
+++ b/src/ProductList/ProductList.scss
@@ -3,6 +3,35 @@
 @import 'scss/mixins';
 
 .product-list {
-  padding: $baseSpacing;
   margin: 0 auto;
+
+  .product-list-header {
+    display: block;
+    background-color: white;
+    width: 100%;
+    text-align: center;
+
+    h2 {
+      padding: $baseSpacing;
+      margin: 0;
+      font-size: 1.4em;
+      font-weight: normal;
+    }
+  }
+
+  .list {
+    padding: $baseSpacing;
+    margin: 0 auto;
+    display: flex;
+    flex: 1;
+  }
+}
+
+@media only screen and (max-width: $bp-medium) { 
+  .product-list {
+
+    .product-list-header {
+      display: none;
+    }
+  }
 }
