--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,25 @@
 @import 'scss/colors';
 @import 'scss/mixins';
 
+.product-list-header {
+  display: block;
+  background-color: white;
+  width: 100%;
+  text-align: center;
+
+  h2 {
+    padding: $baseSpacing;
+    margin: 0;
+    font-size: 1.4em;
+    font-weight: normal;
+  }
+}
+
+@media only screen and (max-width: $bp-medium) { 
+  .product-list {
+
+    .product-list-header {
+      display: none;
+    }
+  }
+}
