--- a/src/ProductList/components/ProductPreview/ProductPreview.scss
+++ b/src/ProductList/components/ProductPreview/ProductPreview.scss
@@ -92,9 +92,9 @@
   }
 }
 
-@media only screen and (max-width: $bp-medium) {
+@media only screen and (max-width: $bp-large) {
   .product-preview {
-
+    
     .product-preview-content {
 
       .product-body {
