--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -15,7 +15,6 @@
 
 @mixin product-price($color) {
   color: $color;
-  display: block;
   font-size: 0.8;
 
   &::before {
@@ -28,4 +27,10 @@
 
 @mixin shadow {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.1);
+}
+
+@mixin background-image-cover {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
