--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -3,6 +3,7 @@ $darkenPercent: 20;
 $baseSpacing: 10px;
 $borderRadius: 6px;
 $productImageBaseHeight: 170px;
+$headerHeight: 60px;
 
 // Breakpoints
 $bp-small: 425px;
