--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
   margin-left: auto;
   margin-right: auto;
   overflow-x: hidden;
-  height: 100vh;
+  height: calc(100vh - #{$headerHeight});
 }
 
 .app-content {
