--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 .App {
   margin-left: auto;
   margin-right: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   height: calc(100vh - #{$headerHeight});
 }
 
