--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -34,3 +34,47 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+@mixin custom-scroll-bar($primary, $secondary) {
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  ::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: $secondary;
+    border: 0px none white;
+    border-radius: 0px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: $primary;
+  }
+
+  ::-webkit-scrollbar-thumb:active {
+    background: $primary;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: lighten($color: $secondary, $amount: 20);
+    border: 0px none #ffffff;
+    border-radius: 100px;
+  }
+
+  ::-webkit-scrollbar-track:hover {
+    background: lighten($color: $primary, $amount: 20);
+  }
+
+  ::-webkit-scrollbar-track:active {
+    background: lighten($color: $primary, $amount: 20);
+  }
+
+  ::-webkit-scrollbar-corner {
+    background: transparent;
+  }
+}
