--- a/src/modules/Cart/container/index.scss
+++ b/src/modules/Cart/container/index.scss
@@ -29,8 +29,9 @@
   .cart-total-price {
     display: flex;
     flex: 0.5;
-    justify-content: space-around;
-    padding-bottom: $baseSpacing;
+    justify-content: space-between;
+
+    padding: $baseSpacing;
     border-bottom: 1px solid $light;
 
     .total-label {
