Style cart padding

--- a/src/modules/Cart/container/index.scss
+++ b/src/modules/Cart/container/index.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   flex: 1;
   margin: $baseSpacing * 2;
+  margin-left: $baseSpacing;
   padding: $baseSpacing;
   border-radius: $borderRadius;
   background-color: white;
@@ -53,5 +54,11 @@
     border-radius: $borderRadius;
     font-weight: bold;
     border: none;
+  }
+}
+
+@media only screen and (max-width: $bp-large) {
+  .cart {
+    margin-left: $baseSpacing * 2;
   }
 }
