--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,3 +1,5 @@
+@import 'scss/vars';
+
 @mixin background-grandient-darken($bgColor, $darkenPercent) {
   background: $bgColor;
   background: linear-gradient(90deg, $bgColor 0%, darken($bgColor, $darkenPercent) 50%);
@@ -37,7 +39,7 @@
 
 @mixin custom-scroll-bar($primary, $secondary) {
   ::-webkit-scrollbar {
-    width: 6px;
+    width: $scrollBarWidth;
     height: 6px;
     @include shadow;
   }
