--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -4,6 +4,7 @@ $baseSpacing: 10px;
 $borderRadius: 6px;
 $productImageBaseHeight: 170px;
 $headerHeight: 60px;
+$scrollBarWidth: 6px;
 
 // Breakpoints
 $bp-small: 425px;
