--- a/src/modules/Header/components/Header.scss
+++ b/src/modules/Header/components/Header.scss
@@ -12,9 +12,42 @@
   align-items: center;
   @include shadow;
 
-  h1 {
-    margin: 0;
-    padding: 0;
-    font-size: 1.2em;
+  .header-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex: 1;
+
+    h1 {
+      margin: 0;
+      padding: 0;
+      font-size: 1.2em;
+    }
+
+    .favorites {
+      cursor: pointer;
+      position: relative;
+      svg {
+        fill: red;
+      }
+
+    }
+
+    .cart-icon {
+      cursor: pointer;
+      position: relative;
+
+      span {
+        &::before {
+          content: 'Cart';
+          position: absolute;
+          font-size: 0.8em;
+          width: 150px;
+          left: -40px;
+        }
+      }
+ 
+    }
   }
+
 }
