--- a/src/modules/Cart/components/EmptyOrders/EmptyOrders.scss
+++ b/src/modules/Cart/components/EmptyOrders/EmptyOrders.scss
@@ -2,12 +2,12 @@
 @import 'scss/colors';
 @import 'scss/mixins';
 
-.product-list-empty {
+.empty-orders {
   display: flex;
-  flex: 1;
+  height: 100%;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  color: darken($light, 10);
+  font-size: 0.8em;
   font-weight: bold;
-  color: darken($light, 20);
 }
