Fix header shadow

--- a/src/modules/Common/components/Header/Header.scss
+++ b/src/modules/Common/components/Header/Header.scss
@@ -3,6 +3,8 @@
 @import 'scss/mixins';
 
 .header {
+  position: relative;
+  z-index: 2;
   background-color: white;
   height: $headerHeight;
   margin: 0;
