Feature update stock on front

--- a/src/modules/Product/components/ProductPreview/ProductPreview.scss
+++ b/src/modules/Product/components/ProductPreview/ProductPreview.scss
@@ -69,6 +69,13 @@
             @include background-grandient-darken($primary, $darkenPercent);
             color: white;
           }
+
+          &:disabled {
+            background: $light;
+            color: white;
+            border-color: white;
+            cursor: not-allowed;
+          }
         }
   
         .product-price {
