Style cart-list padding

--- a/src/modules/Cart/container/index.scss
+++ b/src/modules/Cart/container/index.scss
@@ -19,6 +19,7 @@
   .cart-orders-list {
     border: 1px dashed $light;
     border-radius: $borderRadius;
+    padding: $baseSpacing;
     overflow-y: auto;
     height: calc(80vh - (#{$baseSpacing} * 4) - #{$headerHeight});
 
