Style disabled-btn mixin

--- a/src/modules/Cart/container/index.scss
+++ b/src/modules/Cart/container/index.scss
@@ -59,8 +59,7 @@
     cursor: pointer;
 
     &:disabled {
-      background: $light;
-      cursor: not-allowed;
+      @include disabled-btn;
     }
   }
 }
